add policies.kyverno.io/minversion annotations
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/restrict_pod_count_per_node.yaml
+++ b/other/restrict_pod_count_per_node.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Pod Count per Node
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/minversion: 1.3.2
     policies.kyverno.io/description: >-
       Sample policy to restrict pod count on node 'minikube' to be no more than 10.
     # pod-policies.kyverno.io/autogen-controllers: None
