--- a/other/restrict_service_account.yaml
+++ b/other/restrict_service_account.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Service Account
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/minversion: 1.3.5
     policies.kyverno.io/description: >-
       Restrict Pod resources to use a known service account can be useful to
       ensure workload identity. This policy uses a ConfigMap resource as an
