--- a/best-practices/add_ns_quota.yaml
+++ b/best-practices/add_ns_quota.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add Quota
     policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/subject: ResourceQuota, LimitRange
     policies.kyverno.io/description: >-
       To limit the number of objects, as well as the total amount of compute that 
       may be consumed by a single namespace, create a default resource quota for 
