--- a/other/add_labels.yaml
+++ b/other/add_labels.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Add Labels
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Label
     policies.kyverno.io/description: >-
       Simple mutation which adds a label `foo=bar` to different resource kinds.
 spec:
