--- a/other/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add Pod Anti-Affinity
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Deployment, Pod
     policies.kyverno.io/description: >-
       Sample policy to add Pod anti-affinity
 spec:
