--- a/other/restrict_node_selection.yaml
+++ b/other/restrict_node_selection.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Restrict node selection
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       This policy prevents users from targeting specific nodes
       for scheduling of Pods by prohibiting the use of the `nodeSelector`
