--- a/other/spread_pods_across_topology.yaml
+++ b/other/spread_pods_across_topology.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Spread Pods Across Nodes 
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Deployment, Pod
     policies.kyverno.io/description: >-
       Sample policy to spread pods matching a label across nodes.
 spec:
