--- a/other/sync_secrets.yaml
+++ b/other/sync_secrets.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Sync Secrets 
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Secret
     policies.kyverno.io/description: >-
       Secrets like registry credentials often need to exist in multiple
       namespaces so pods there have access. This sample policy will copy a
