--- a/pod-security/baseline/disallow-host-ipc/disallow-host-ipc.yaml
+++ b/pod-security/baseline/disallow-host-ipc/disallow-host-ipc.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description:
       Sharing the host's PID namespace allows visibility of process
       on the host, potentially exposing process information. Sharing the host's IPC namespace allows
