--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add safe-to-evict 
     policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The Kubernetes cluster autoscaler does not evict pods that use hostPath 
       or emptyDir volumes. To allow eviction of these pods, the annotation 
