--- a/best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
+++ b/best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Disallow CRI socket mounts
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Container daemon socket bind mounts allows access to the container engine on the 
       node. This access can be used for privilege escalation and to manage containers 
