--- a/other/add_nodeSelector.yaml
+++ b/other/add_nodeSelector.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add nodeSelector
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Adds the nodeSelector field to a Pod spec.
 spec:
