--- a/other/add_volume_deployment.yaml
+++ b/other/add_volume_deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add Volume to Deployment
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Deployment, Volume
     policies.kyverno.io/description: >-
       Sample policy to add a volume and volumeMount to a Deployment resource. This checks for the presence of an annotation called
       "vault.k8s.corp.net/inject=enabled" and adds an emptyDir volume using the memory medium.
