--- a/other/ensure_probes_different.yaml
+++ b/other/ensure_probes_different.yaml
@@ -8,6 +8,7 @@ metadata:
     policies.kyverno.io/title: Validate Probes
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Sample policy to check that liveness and readiness probes are not set to the same values.
 spec:
