--- a/other/require_deployments_have_multiple_replicas.yaml
+++ b/other/require_deployments_have_multiple_replicas.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Require Multiple Replicas
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Deployment
     policies.kyverno.io/description: >-
       Sample policy that requires more than one replica for deployments.    
 spec:
