--- a/other/require_image_checksum.yaml
+++ b/other/require_image_checksum.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Require Images Use Checksums
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Use of a SHA checksum when pulling an image is often preferable because tags
       are mutable and can be overwritten. This policy checks to ensure that all images
