--- a/other/restrict_annotations.yaml
+++ b/other/restrict_annotations.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Annotations
     policies.kyverno.io/category: Sample
     policies.kyverno.io/minversion: 1.3.0
+    policies.kyverno.io/subject: Pod, Annotation
     policies.kyverno.io/description: >-
       This example policy prevents the use of an annotation beginning with a common
       key name (in this case "fluxcd.io/"). This can be useful to ensure users either
