--- a/other/restrict_controlplane_scheduling.yaml
+++ b/other/restrict_controlplane_scheduling.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Restrict control plane scheduling
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       This policy prevents users from setting a toleration
       in a Pod spec which allows running on control plane nodes
