--- a/other/restrict_ingress_classes.yaml
+++ b/other/restrict_ingress_classes.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Ingress Classes
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Ingress
     policies.kyverno.io/description: >-
       It can be useful to restrict Ingress resources to a set of known ingress classes 
       that are allowed in the cluster. You can customize this policy to allow ingress 
