--- a/other/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Disallow Service Type LoadBalancer
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Service
     policies.kyverno.io/description: >-
       Sample policy to restrict use of Service type LoadBalancer.
 spec:
