--- a/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Seccomp
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The runtime default seccomp profile must be required, or only specific
       additional profiles should be allowed.
