safe to evict policy fails on generated items without volumes
Signed-off-by: Jon Leemon <jon.leemon@invitae.com>

--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -23,7 +23,7 @@ spec:
           annotations:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
         spec:          
-          volumes: 
+          (volumes): 
           - (emptyDir): {}
   - name: annotate-host-path
     match: 
@@ -36,6 +36,6 @@ spec:
           annotations:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
         spec:          
-          volumes: 
+          (volumes): 
           - (hostPath):
               path: "*"
