Fix capabilities.add of null => "null"
When add is specified as null instead of "null" the policy is not
actually enforced.

Ref: #69

--- a/pod-security/baseline/disallow-adding-capabilities/disallow-adding-capabilities.yaml
+++ b/pod-security/baseline/disallow-adding-capabilities/disallow-adding-capabilities.yaml
@@ -28,8 +28,8 @@ spec:
             containers:
               - =(securityContext):
                   =(capabilities):
-                    X(add): null
+                    X(add): "null"
             =(initContainers):
               - =(securityContext):
                   =(capabilities):
-                    X(add): null
+                    X(add): "null"
